# botAmelia

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING_REPORT.md  deny.toml  docker-compose.yml  fly.toml  nixpacks.toml  railway-deploy.md  railway.toml
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cerberus-leverage-framework/: design.md  requirements.md  tasks.md
config/: config.toml
docs/: setup.md  strategies.md
kestra/: DEPLOYMENT.md  EXAMPLES.md  README.md  secrets.env  secrets.env.example
kestra/flows/: cerberus-advanced-alerting.yaml  cerberus-analytics.yaml  cerberus-monitoring.yaml  cerberus-position-management.yaml  cerberus-system-management.yaml  cerberus-trading-pipeline.yaml
migrations/: 20250808_000001_create_wallets.sql  20250808_000002_create_addresses.sql  20250808_000003_create_transactions.sql  20250808_000004_create_sync_stats.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: cerberus-kestra-dashboard.json
scripts/: deploy.sh  test-kestra-integration.sh
src/: lib.rs  main.rs
src/alerts/: discord.rs  email.rs  mod.rs  sender.rs  telegram.rs
src/api/: handlers.rs  middleware.rs  mod.rs  models.rs  wallet_handlers.rs
src/bitcoin/: core.rs  hardware_signer.rs  key_manager.rs  mod.rs  psbt.rs  psbt_advanced.rs  rpc.rs  script_types.rs  security_validator.rs  transaction.rs  transaction_signer.rs  wallet.rs
src/cache/: mod.rs
src/config/: alerts.rs  database.rs  mod.rs  monitoring.rs  risk.rs  trading.rs
src/database/: mod.rs
src/errors/: mod.rs
src/indexer/: bitcoin.rs  coinstats.rs  evm.rs  mod.rs
src/monitoring/: mod.rs
src/risk/: mod.rs
src/security/: mod.rs
src/signals/: mod.rs
src/trading/: mod.rs
src/wallets/: cache.rs  manager.rs  mod.rs  models.rs  sync.rs
tests/: README.md  edge_cases.rs  integration.rs  integration_migrations.rs  mod.rs  performance.rs  test_utils.rs  unit_alerts.rs  unit_bitcoin.rs  unit_cache.rs  unit_config.rs  unit_database.rs  unit_errors.rs  unit_monitoring.rs  unit_security.rs
